ms-auth/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ms-auth
    squad: client
  annotations:
    configmap.reloader.stakater.com/reload: "ms-auth"
    secret.reloader.stakater.com/reload: "ms-auth"    
  name: ms-auth
  namespace: client-ms-auth
spec:
  selector:
    matchLabels:
      app: ms-auth
  strategy:
    rollingUpdate:
      maxSurge: 75%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ms-auth
    spec:
      automountServiceAccountToken: true
      containers:
        - name: ms-auth
          image: luuna/ms-auth:latest-develop
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /.well-known/apollo/server-health
              port: 5000
              scheme: HTTP
            periodSeconds: 10
            timeoutSeconds: 30
            successThreshold: 3
            failureThreshold: 6
          resources:
            requests:
              memory: "250Mi"
              cpu: "150m"
            limits:
              memory: "500Mi"
              cpu: "250m"
          securityContext:
            readOnlyRootFilesystem: true
            runAsGroup: 10000
            runAsUser: 10000
      imagePullSecrets:
        - name: regcred
      nodeSelector:
        purpose: backend
      restartPolicy: Always
